--- a/7.Algorithmes/300159189/RAPPORT.ipynb
+++ b/7.Algorithmes/300159189/RAPPORT.ipynb
@@ -2,6 +2,8 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "caaae55f-3321-4d91-946a-7c7549e85961",
+   "metadata": {},
    "source": [
     "# 🧮 Étude : Influence des boucles et de la récursion sur les algorithmes\n",
     "\n",
@@ -10,34 +12,38 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## 🔍 Introduction\n",
-    "\n",
-    "Un **algorithme** peut être implémenté de plusieurs façons. Les deux approches principales sont :\n",
-    "\n",
-    "- **L’itération** : répétition d’instructions via des boucles (`for`, `while`).\n",
-    "- **La récursion** : une fonction qui s’appelle elle-même pour résoudre un sous-problème plus simple.\n",
-    "\n",
-    "Chaque approche influence la **performance**, la **lisibilité** et la **consommation mémoire** du programme."
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   "id": "f64851bb-1b0b-46db-91aa-4e2c44bfb6b7",
+   "metadata": {},
    "source": [
     "## 1️⃣ Factorielle\n",
     "\n",
     "### 🔹 Formule mathématique\n",
     "\n",
-    "$$\n",
+    "$\n",
     "n! = \\begin{cases}\n",
     "   1, & \\text{si } n = 0 \\\\\n",
     "   n \\times (n - 1)!, & \\text{si } n > 0\n",
     "\\end{cases}\n",
-    "$$"
+    "$"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "efcb751e-1bfb-430e-b18e-b85ab2a1167d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def factorielle_iterative(n):\n",
     "    resultat = 1\n",
@@ -45,55 +51,94 @@
     "        resultat *= i\n",
     "    return resultat\n",
     "\n",
+    "# Exemple\n",
     "factorielle_iterative(5)"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "b6926b01-8b30-442f-8fe6-00d702285fd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def factorielle_recursive(n):\n",
     "    if n == 0:\n",
     "        return 1\n",
     "    return n * factorielle_recursive(n - 1)\n",
     "\n",
+    "# Exemple\n",
     "factorielle_recursive(5)"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "a19e87bc-ea3e-4e60-8434-a92731f529cd",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from functools import reduce\n",
     "\n",
     "def factorielle_comprehension(n):\n",
-    "    if n == 0:\n",
+    "    if n == 0:  # condition de sortie (cas de base)\n",
     "        return 1\n",
+    "    # Produit de tous les entiers de 1 à n en utilisant une comprehension\n",
     "    return reduce(lambda x, y: x*y, [i for i in range(1, n+1)])"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "96631451-7cb0-4948-996b-6b9d6732a1d7",
+   "metadata": {},
    "source": [
     "## 2️⃣ Somme des n premiers entiers\n",
     "\n",
     "### 🔹 Formule mathématique\n",
     "\n",
-    "$$\n",
+    "$\n",
     "S(n) = 1 + 2 + 3 + \\dots + n = \\frac{n(n + 1)}{2}\n",
-    "$$\n",
+    "$\n",
     "\n",
     "### 🔹 Forme récursive\n",
     "\n",
-    "$$\n",
+    "$\n",
     "S(n) =\n",
     "\\begin{cases}\n",
     "   0, & \\text{si } n = 0 \\\\\n",
     "   n + S(n - 1), & \\text{si } n > 0\n",
     "\\end{cases}\n",
-    "$$"
+    "$"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "9cae5529-c37a-4469-82c6-8fe71ae39772",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def somme_while(n):\n",
     "    i = 1\n",
@@ -108,6 +153,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "03317415-db58-40ea-ab07-c001ce5feb94",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def somme_recursive(n):\n",
     "    if n == 0:\n",
@@ -119,23 +179,40 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c4fc9a72-51c9-4198-9bb4-5f91e61dcf1a",
+   "metadata": {},
    "source": [
     "## 3️⃣ Suite de Fibonacci\n",
     "\n",
     "### 🔹 Formule mathématique\n",
     "\n",
-    "$$\n",
+    "$\n",
     "F(n) =\n",
     "\\begin{cases}\n",
     "   0, & \\text{si } n = 0 \\\\\n",
     "   1, & \\text{si } n = 1 \\\\\n",
     "   F(n - 1) + F(n - 2), & \\text{si } n \\ge 2\n",
     "\\end{cases}\n",
-    "$$"
+    "$"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "16726d91-2f8f-46c9-8979-e592a043674e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def fib_iter(n):\n",
     "    a, b = 0, 1\n",
@@ -148,6 +225,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "8a74a240-42a0-4180-806c-1fd2a1ef94dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def fib_rec(n):\n",
     "    if n <= 1:\n",
@@ -159,91 +251,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cbb91b5d-1f3f-4b96-b563-23cb04dfbad1",
+   "metadata": {},
    "source": [
-    "## 🧪 4️⃣ Analyse des performances\n",
-    "\n",
-    "Pour comparer les approches, on mesure le **temps d’exécution** de chaque version avec le module `time`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "import time\n",
-    "\n",
-    "n = 30\n",
-    "\n",
-    "# Test de la version récursive\n",
-    "start = time.time()\n",
-    "fib_rec(n)\n",
-    "t_rec = time.time() - start\n",
-    "\n",
-    "# Test de la version itérative\n",
-    "start = time.time()\n",
-    "fib_iter(n)\n",
-    "t_iter = time.time() - start\n",
-    "\n",
-    "print(f\"⏱️ Temps récursif : {t_rec:.6f} secondes\")\n",
-    "print(f\"⚙️ Temps itératif : {t_iter:.6f} secondes\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### 📊 Visualisation graphique"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "valeurs = list(range(5, 30, 5))\n",
-    "temps_rec, temps_iter = [], []\n",
-    "\n",
-    "for n in valeurs:\n",
-    "    start = time.time()\n",
-    "    fib_rec(n)\n",
-    "    temps_rec.append(time.time() - start)\n",
-    "\n",
-    "    start = time.time()\n",
-    "    fib_iter(n)\n",
-    "    temps_iter.append(time.time() - start)\n",
-    "\n",
-    "plt.figure(figsize=(7,5))\n",
-    "plt.plot(valeurs, temps_rec, 'r-o', label='Récursif')\n",
-    "plt.plot(valeurs, temps_iter, 'g-o', label='Itératif')\n",
-    "plt.xlabel('n')\n",
-    "plt.ylabel('Temps (secondes)')\n",
-    "plt.title('Comparaison de performance : Fibonacci récursif vs itératif')\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## 📘 5️⃣ Synthèse comparative\n",
+    "## 📘 4️⃣ Synthèse comparative\n",
     "\n",
     "| Algorithme | Formule mathématique | Base | Récurrence | Complexité temporelle |\n",
     "|-------------|----------------------|-------|-------------|------------------------|\n",
-    "| Factorielle | $ n! = n \\times (n-1)! $ | $ 0! = 1 $ | Simple | O(n) |\n",
-    "| Somme | $ S(n) = n + S(n-1) $ | $ S(0) = 0 $ | Simple | O(n) |\n",
-    "| Fibonacci | $ F(n) = F(n-1) + F(n-2) $ | $ F(0)=0, F(1)=1 $ | Double | O($2^n$) (récursif) / O(n) (itératif) |"
+    "| Factorielle | \\\\( n! = n \\times (n-1)! \\\\) | \\\\( 0! = 1 \\\\) | Simple | O(n) |\n",
+    "| Somme | \\\\( S(n) = n + S(n-1) \\\\) | \\\\( S(0) = 0 \\\\) | Simple | O(n) |\n",
+    "| Fibonacci | \\\\( F(n) = F(n-1) + F(n-2) \\\\) | \\\\( F(0)=0, F(1)=1 \\\\) | Double | O($2^n$) (récursif) / O(n) (itératif) |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 🧠 Conclusion\n",
+    "\n",
+    "- Les **boucles (`for`, `while`)** permettent une **programmation itérative**, efficace en mémoire.  \n",
+    "- La **récursion** traduit directement la **définition mathématique** d’un algorithme, mais consomme plus de mémoire.  \n",
+    "- Les deux approches atteignent le même résultat, mais influencent différemment la **structure, la performance et la lisibilité** des algorithmes."
    ]
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "## 🧠 Conclusion\n",
-    "\n",
-    "- Les **boucles (`for`, `while`)** offrent une exécution rapide et une faible consommation mémoire.\n",
-    "- La **récursion** traduit élégamment les définitions mathématiques mais devient coûteuse pour de grands `n`.\n",
-    "- La **complexité temporelle** d’un algorithme dépend fortement de la méthode utilisée.\n",
-    "- En pratique, l’**itération** est préférable pour la performance, tandis que la **récursion** est utile pour la clarté algorithmique.\n",
-    "\n",
-    "> ✅ **Conclusion finale :** Les boucles optimisent l’efficacité, la récursion optimise la compréhension."
-   ]
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a314f12-bff0-4a11-8ac7-874762150cb5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -253,11 +287,18 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.9"
   }
  },
  "nbformat": 4,
  "nbformat_minor": 5
 }
-
