--- a/5.Jupyter/300158486/RAPPORT.ipynb
+++ b/5.Jupyter/300158486/RAPPORT.ipynb
@@ -6,7 +6,29 @@
    "id": "3ab70726-acbd-4f9d-9c84-264914bf6956",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# demander l'âge à l'utilisateur puis afficher un message personnalisé"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c455d9a8-d63a-4e4f-80b6-e289d204db8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "age = input(\"Quel âge as-tu ? \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "664073fe-c115-4a71-90fa-683d705153d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Tu as \" + age + \" ans ! C'est un bel âge 🙂\")"
+   ]
   }
  ],
  "metadata": {
