--- a/5.Jupyter/300150468/RAPPORT.ipynb
+++ b/5.Jupyter/300150468/RAPPORT.ipynb
@@ -6,6 +6,19 @@
    "id": "44a06ecf-1057-4b66-a5e9-66b868ce401d",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Un petit programme qui demande ton nom et te salue\n",
+    "\n",
+    "nom = input(\"Quel est ton nom ? \")\n",
+    "print(\"Bonjour\", nom, \"!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e3ad3dd-0aa7-4a62-8a33-ee14b92340b4",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
