--- a/6.Variables/300158486/RAPPORT.ipynb
+++ b/6.Variables/300158486/RAPPORT.ipynb
@@ -2,10 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f04438a8-2d02-4e6b-a3b8-6bf74cd47a0f",
+   "id": "d8425461-76db-4428-94e2-dd491fbd0dd2",
    "metadata": {},
    "source": [
-    "# RAPPORT : Analyse de Code Python (Variables, Moyennes, Ensembles)\n",
+    "# 🪐 RAPPORT : Analyse de Code Python (Variables, Moyennes, Ensembles)\n",
+    "\n",
+    "|     |                     |\n",
+    "| --- | ------------------- |\n",
+    "| Nom | LYES HAMED |\n",
+    "| 🆔  | 300158486           |\n",
+    "\n",
     "\n",
     "Ce notebook présente trois sections :\n",
     "1. Le module `embellisseur` et la fonction `f`\n",
@@ -159,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
