Add Python code analysis report in RAPPORT.ipynb
Added a comprehensive report on Python code analysis covering polymorphism, average calculations, and set comprehensions.

--- a/6.Variables/300157334/RAPPORT.ipynb
+++ b/6.Variables/300157334/RAPPORT.ipynb
@@ -1,1 +1,78 @@
 
+# -------------------------------
+# RAPPORT : Analyse de Code Python (Variables, Moyennes, Ensembles)
+# -------------------------------
+
+# 1️⃣ Fonction polymorphe (remplace `embellisseur.f`)
+def f(val):
+    """Fonction qui illustre le polymorphisme."""
+    resultat = {"type": type(val).__name__}
+    
+    try:
+        resultat["longueur"] = len(val)
+    except TypeError:
+        resultat["longueur"] = None
+    
+    if isinstance(val, (int, float)):
+        resultat["double"] = val * 2
+    elif isinstance(val, str):
+        resultat["inverse"] = val[::-1]
+    elif isinstance(val, (list, tuple)):
+        resultat["somme"] = sum(val)
+    elif isinstance(val, dict):
+        resultat["cles"] = list(val.keys())
+    
+    return resultat
+
+# Exemples
+exemples = [10, 2.718, "hello", [7, 8, 9], (10, 20, 30), {"x": 1, "y": 2}]
+
+for e in exemples:
+    print(f"\n--- f({e}) ---")
+    resultat = f(e)
+    for k, v in resultat.items():
+        print(f"{k:12} -> {v}")
+
+# -------------------------------
+# 2️⃣ Moyenne algébrique et géométrique (remplace `moyenne` module)
+import math
+
+def algebrique(L):
+    return sum(L) / len(L) if L else 0
+
+def geometrique(L):
+    produit = 1
+    for x in L:
+        produit *= x
+    return produit**(1/len(L)) if L else 0
+
+liste = [2, 4.5, 6, 8, 10]
+print("\nLa moyenne algébrique est :", algebrique(liste))
+print("La moyenne géométrique est :", geometrique(liste))
+
+# -------------------------------
+# 3️⃣ Ensembles et comprehension
+K = ['A', 'B', 'C']
+X = [1, 2, 3, 4, 5, 6]
+
+def P(x):
+    return x % 2 == 0  # condition : x pair
+
+S = {(k, x) for k in K for x in X if P(x)}
+print("\nEnsemble des couples filtrés :", S)
+
+x_values = [x for (_, x) in S]
+moyenne = algebrique(x_values) if x_values else 0
+print("Moyenne algébrique des x filtrés :", moyenne)
+
+# -------------------------------
+# 🧠 Conclusion
+print("""
+Ce rapport montre comment :
+- Une même fonction (`f`) peut traiter plusieurs types de données.
+- Des fonctions mathématiques (`algebrique`, `geometrique`) peuvent être réutilisées.
+- Les ensembles et comprehensions facilitent les filtres et combinaisons de données.
+
+Python est un langage à typage dynamique, où les fonctions peuvent être générales,
+et les structures (listes, tuples, sets, dictionnaires) très expressives.
+""")
