--- a/6.Variables/300157330/RAPPORT.ipynb
+++ b/6.Variables/300157330/RAPPORT.ipynb
@@ -9,8 +9,8 @@
     "\n",
     "|     |                     |\n",
     "| --- | ------------------- |\n",
-    "| Nom | Personne Importante |\n",
-    "| 🆔  | 999999999           |\n",
+    "| Nom | toufik mekbel |\n",
+    "| 🆔  | 300157330           |\n",
     "\n",
     "\n",
     "Ce notebook présente trois sections :\n",
