--- a/6.Variables/300159189/RAPPORT.ipynb
+++ b/6.Variables/300159189/RAPPORT.ipynb
@@ -2,10 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "97dc253f-5a58-4f23-ab06-25acd0571975",
    "metadata": {},
    "source": [
-    "# RAPPORT : Analyse de Code Python (Variables, Moyennes, Ensembles)\n",
+    "# 🧮 RAPPORT : Analyse de Code Python (Variables, Moyennes, Ensembles)\n",
     "\n",
     "**Nom :** Fateh  \n",
     "**ID :** 300159189  \n",
@@ -21,7 +20,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2fbb736-e238-4133-b470-4f570037b9c1",
    "metadata": {},
    "source": [
     "#### 1️⃣ Import du module `embellisseur`\n",
@@ -31,9 +29,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "6029c233-a369-48ac-94ac-10a837f7c137",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "from embellisseur import f\n",
     "\n",
@@ -42,9 +41,3 @@
     "    2.718,\n",
     "    \"hello\",\n",
     "    [7, 8, 9],\n",
-    "    (10, 20, 30),\n",
-    "    {\"x\": 1, \"y\": 2}\n",
-    "]\n",
-    "\n",
-    "for e in exemples:\n",
-    "    print(f\"\\n--- f({
