--- a/6.Variables/300155606/RAPPORT.ipynb
+++ b/6.Variables/300155606/RAPPORT.ipynb
@@ -9,8 +9,8 @@
     "\n",
     "|     |                     |\n",
     "| --- | ------------------- |\n",
-    "| Nom | Personne Importante |\n",
-    "| 🆔  | 999999999           |\n",
+    "| Nom | djelloul msili |\n",
+    "| 🆔  | 300155606          |\n",
     "\n",
     "\n",
     "Ce notebook présente trois sections :\n",
