--- a/6.Variables/300155187/RAPPORT.ipynb
+++ b/6.Variables/300155187/RAPPORT.ipynb
@@ -7,6 +7,12 @@
    "source": [
     "# RAPPORT : Analyse de Code Python (Variables, Moyennes, Ensembles)\n",
     "\n",
+    "**Nom :** Fateh  \n",
+    "**ID :** 300159189  \n",
+    "**Date :** 12 novembre 2025\n",
+    "\n",
+    "---\n",
+    "\n",
     "Ce notebook présente trois sections :\n",
     "1. Le module `embellisseur` et la fonction `f`\n",
     "2. Le module `moyenne` (moyenne algébrique et géométrique)\n",
@@ -25,9 +31,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "6029c233-a369-48ac-94ac-10a837f7c137",
    "metadata": {},
+   "outputs": [],
    "source": [
     "from embellisseur import f\n",
     "\n",
@@ -105,87 +113,3 @@
     "Cela illustre :\n",
     "- les **comprehensions** (`{... for ... if ...}`)\n",
     "- l'utilisation des **ensembles (`set`)**\n",
-    "- la **réutilisation de fonction** (`algebrique`)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "7adc8862-ff8d-4ad3-b1c6-1a0932a5c803",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ensemble des couples filtrés : {('A', 4), ('B', 6), ('C', 4), ('B', 2), ('C', 6), ('A', 6), ('C', 2), ('A', 2), ('B', 4)}\n",
-      "Moyenne algébrique des x filtrés : 4.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "K = ['A', 'B', 'C']\n",
-    "X = [1, 2, 3, 4, 5, 6]\n",
-    "\n",
-    "def P(x):\n",
-    "    return x % 2 == 0\n",
-    "\n",
-    "S = {(k, x) for k in K for x in X if P(x)}\n",
-    "print(\"Ensemble des couples filtrés :\", S)\n",
-    "\n",
-    "x_values = [x for (_, x) in S]\n",
-    "if x_values:\n",
-    "    moyenne = algebrique(x_values)\n",
-    "else:\n",
-    "    moyenne = 0\n",
-    "\n",
-    "print(\"Moyenne algébrique des x filtrés :\", moyenne)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4485b926-3b4d-44f2-905a-67dfc515a89c",
-   "metadata": {},
-   "source": [
-    "## 🧠 Conclusion\n",
-    "\n",
-    "Ce rapport montre comment :\n",
-    "- Une même fonction (`f`) peut traiter plusieurs types de données.\n",
-    "- Des fonctions mathématiques (`algebrique`, `geometrique`) peuvent être réutilisées.\n",
-    "- Les **ensembles** et **comprehensions** facilitent les filtres et combinaisons de données.\n",
-    "\n",
-    "> 🧩 Python est un langage à typage dynamique, où les fonctions peuvent être générales,\n",
-    "> et les structures (listes, tuples, sets, dictionnaires) très expressives."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "987cb4ef-2c8f-4eaf-9c76-7599f16eecf0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.12"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
-}
