--- a/6.Variables/300157334/RAPPORT.ipynb
+++ b/6.Variables/300157334/RAPPORT.ipynb
@@ -1,51 +1,89 @@
+# -------------------------------
+# RAPPORT : Analyse de Code Python (Variables, Moyennes, Ensembles)
+# -------------------------------
 
-{ "300157334"
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "97dc253f-5a58-4f23-ab06-25acd0571975",
-   "metadata": {},
-   "source": [
-    "# RAPPORT : Analyse de Code Python (Variables, Moyennes, Ensembles)\n",
-    "\n",
-    "**Nom :** Fateh  \n",
-    "**ID :** 300159189  \n",
-    "**Date :** 12 novembre 2025\n",
-    "\n",
-    "---\n",
-    "\n",
-    "Ce notebook présente trois sections :\n",
-    "1. Le module `embellisseur` et la fonction `f`\n",
-    "2. Le module `moyenne` (moyenne algébrique et géométrique)\n",
-    "3. Les ensembles (`set`) et la compréhension"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d2fbb736-e238-4133-b470-4f570037b9c1",
-   "metadata": {},
-   "source": [
-    "#### 1️⃣ Import du module `embellisseur`\n",
-    "\n",
-    "Cette section montre comment la fonction `f` traite différents types de variables.\n",
-    "Elle illustre le **polymorphisme** de Python (une même fonction peut gérer plusieurs types)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6029c233-a369-48ac-94ac-10a837f7c137",
-   "metadata": {},
-   "source": [
-    "from embellisseur import f\n",
-    "\n",
-    "exemples = [\n",
-    "    10,\n",
-    "    2.718,\n",
-    "    \"hello\",\n",
-    "    [7, 8, 9],\n",
-    "    (10, 20, 30),\n",
-    "    {\"x\": 1, \"y\": 2}\n",
-    "]\n",
-    "\n",
-    "for e in exemples:\n",
-    "    print(f\"\\n--- f({
+# Informations personnelles
+print("Nom : laala")
+print("ID : 300157334")
+print("Date : 19 novembre 2025\n")
+print("---\n")
+
+# -------------------------------
+# 1️⃣ Fonction polymorphe (remplace `embellisseur.f`)
+# -------------------------------
+def f(val):
+    """Fonction qui illustre le polymorphisme."""
+    resultat = {"type": type(val).__name__}
+    
+    try:
+        resultat["longueur"] = len(val)
+    except TypeError:
+        resultat["longueur"] = None
+    
+    if isinstance(val, (int, float)):
+        resultat["double"] = val * 2
+    elif isinstance(val, str):
+        resultat["inverse"] = val[::-1]
+    elif isinstance(val, (list, tuple)):
+        resultat["somme"] = sum(val)
+    elif isinstance(val, dict):
+        resultat["cles"] = list(val.keys())
+    
+    return resultat
+
+# Exemples de variables
+exemples = [10, 2.718, "hello", [7, 8, 9], (10, 20, 30), {"x": 1, "y": 2}]
+
+# Application de f
+for e in exemples:
+    print(f"\n--- f({e}) ---")
+    resultat = f(e)
+    for k, v in resultat.items():
+        print(f"{k:12} -> {v}")
+
+# -------------------------------
+# 2️⃣ Moyenne algébrique et géométrique
+# -------------------------------
+import math
+
+def algebrique(L):
+    return sum(L) / len(L) if L else 0
+
+def geometrique(L):
+    produit = 1
+    for x in L:
+        produit *= x
+    return produit**(1/len(L)) if L else 0
+
+liste = [2, 4.5, 6, 8, 10]
+print("\nLa moyenne algébrique est :", algebrique(liste))
+print("La moyenne géométrique est :", geometrique(liste))
+
+# -------------------------------
+# 3️⃣ Ensembles et comprehension
+# -------------------------------
+K = ['A', 'B', 'C']
+X = [1, 2, 3, 4, 5, 6]
+
+def P(x):
+    return x % 2 == 0  # condition : x pair
+
+S = {(k, x) for k in K for x in X if P(x)}
+print("\nEnsemble des couples filtrés :", S)
+
+x_values = [x for (_, x) in S]
+moyenne = algebrique(x_values) if x_values else 0
+print("Moyenne algébrique des x filtrés :", moyenne)
+
+# -------------------------------
+# 🧠 Conclusion
+# -------------------------------
+print("""
+Ce rapport montre comment :
+- Une même fonction (`f`) peut traiter plusieurs types de données.
+- Des fonctions mathématiques (`algebrique`, `geometrique`) peuvent être réutilisées.
+- Les ensembles et comprehensions facilitent les filtres et combinaisons de données.
+
+Python est un langage à typage dynamique, où les fonctions peuvent être générales,
+et les structures (listes, tuples, sets, dictionnaires) très expressives.
+""")
