--- a/6.Variables/300157332/RAPPORT.ipynb
+++ b/6.Variables/300157332/RAPPORT.ipynb
@@ -2,9 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "97dc253f-5a58-4f23-ab06-25acd0571975",
+   "id": "300157332",
    "metadata": {},
    "source": [
+    "**Étudiant : Ali Boukhalfa**  \n",
+    "**ID : 300157332**  \n",
+    "**Date : 12/11/2025**\n",
+    "\n",
     "# RAPPORT : Analyse de Code Python (Variables, Moyennes, Ensembles)\n",
     "\n",
     "Ce notebook présente trois sections :\n",
