--- a/6.Variables/300158052/RAPPORT.ipynb
+++ b/6.Variables/300158052/RAPPORT.ipynb
@@ -9,8 +9,8 @@
     "\n",
     "|     |                     |\n",
     "| --- | ------------------- |\n",
-    "| **Nom** | *Ahmed BERGUI* |\n",
-    "| **🆔**  | *300151262* |\n",
+    "| **Nom** | *Zizou Bouchelkia* |\n",
+    "| **🆔**  | *300158052* |\n",
     "Ce notebook présente trois sections :\n",
     "1. Le module `embellisseur` et la fonction `f`\n",
     "2. Le module `moyenne` (moyenne algébrique et géométrique)\n",
