--- a/6.Variables/300157332/RAPPORT.ipynb
+++ b/6.Variables/300157332/RAPPORT.ipynb
@@ -2,30 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "300157332",
    "metadata": {},
    "source": [
-    "**Étudiant : Ali Boukhalfa**  \n",
-    "**ID : 300157332**  \n",
-    "**Date : 12/11/2025**\n",
-    "\n",
-    "# RAPPORT : Analyse de Code Python (Variables, Moyennes, Ensembles)\n",
-    "\n",
+    "# 🪐 RAPPORT : Analyse de Code Python (Variables, Moyennes, Ensembles)\n\n",
+    "|     |                     |\n",
+    "| --- | ------------------- |\n",
+    "| Nom | Boukhalfa Ali |\n",
+    "| 🆔  | 300157332           |\n\n",
     "Ce notebook présente trois sections :\n",
     "1. Le module `embellisseur` et la fonction `f`\n",
     "2. Le module `moyenne` (moyenne algébrique et géométrique)\n",
-    "3. Les ensembles (`set`) et la compréhension"
+    "3. Les ensembles (`set`) et la compréhension\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d2fbb736-e238-4133-b470-4f570037b9c1",
    "metadata": {},
    "source": [
-    "#### 1️⃣ Import du module `embellisseur`\n",
-    "\n",
+    "#### 1️⃣ Import du module `embellisseur`\n\n",
     "Cette section montre comment la fonction `f` traite différents types de variables.\n",
-    "Elle illustre le **polymorphisme** de Python (une même fonction peut gérer plusieurs types)."
+    "Elle illustre le **polymorphisme** de Python (une même fonction peut gérer plusieurs types).\n"
    ]
   },
   {
