--- a/7.Algorithmes/300159189/RAPPORT.ipynb
+++ b/7.Algorithmes/300159189/RAPPORT.ipynb
@@ -1,7 +1,111 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",{
+ "cells": [
+  {
    "cell_type": "markdown",
+   "id": "caaae55f-3321-4d91-946a-7c7549e85961",
+   "metadata": {},
+   "source": [
+    "# 🧮 Étude : Influence des boucles et de la récursion sur les algorithmes\n",
+    "\n",
+    "**Nom :** Fateh  \n",
+    "**ID :** 300159189  \n",
+    "**Date :** 12 novembre 2025\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Ce rapport démontre comment les **algorithmes** sont influencés par la **programmation itérative** (avec `for`, `while`) et la **programmation récursive** en **Python**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f64851bb-1b0b-46db-91aa-4e2c44bfb6b7",
+   "metadata": {},
+   "source": [
+    "## 1️⃣ Factorielle\n",
+    "\n",
+    "### 🔹 Formule mathématique\n",
+    "\n",
+    "$\n",
+    "n! = \\begin{cases}\n",
+    "   1, & \\text{si } n = 0 \\\\\n",
+    "   n \\times (n - 1)!, & \\text{si } n > 0\n",
+    "\\end{cases}\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "efcb751e-1bfb-430e-b18e-b85ab2a1167d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def factorielle_iterative(n):\n",
+    "    resultat = 1\n",
+    "    for i in range(1, n + 1):\n",
+    "        resultat *= i\n",
+    "    return resultat\n",
+    "\n",
+    "# Exemple\n",
+    "factorielle_iterative(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b6926b01-8b30-442f-8fe6-00d702285fd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def factorielle_recursive(n):\n",
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    return n * factorielle_recursive(n - 1)\n",
+    "\n",
+    "# Exemple\n",
+    "factorielle_recursive(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a19e87bc-ea3e-4e60-8434-a92731f529cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import reduce\n",
+    "\n",
+    "def factorielle_comprehension(n):\n",
+    "    if n == 0:  # condition de sortie (cas de base)\n",
+    "        return 1\n",
+    "    # Produit de tous les entiers de 1 à n en utilisant une comprehension\n",
+    "    return reduce(lambda x, y: x*y, [i for i in range(]()*
+
    "id": "caaae55f-3321-4d91-946a-7c7549e85961",
    "metadata": {},
    "source": [
