--- a/6.Variables/300150468/RAPPORT.ipynb
+++ b/6.Variables/300150468/RAPPORT.ipynb
@@ -5,7 +5,13 @@
    "id": "2a1d209c-f995-4a0c-a97c-9ea2ddbaa350",
    "metadata": {},
    "source": [
-    "# RAPPORT : Analyse de Code Python (Variables, Moyennes, Ensembles)\n",
+    "# 🪐 RAPPORT : Analyse de Code Python (Variables, Moyennes, Ensembles)\n",
+    "\n",
+    "|     |                     |\n",
+    "| --- | ------------------- |\n",
+    "| Nom | mohand said saheb |\n",
+    "| 🆔  | 300150468|\n",
+    "\n",
     "\n",
     "Ce notebook présente trois sections :\n",
     "1. Le module `embellisseur` et la fonction `f`\n",
