--- a/7.Algorithmes/300157334/RAPPORT.ipynb
+++ b/7.Algorithmes/300157334/RAPPORT.ipynb
@@ -1,108 +1,136 @@
-# -------------------------------
-# 🧮 Étude : Influence des boucles et de la récursion sur les algorithmes
-# -------------------------------
-
-print("Nom : laala")
-print("ID : 300157334")
-print("Date : 1 novembre 2025\n")
-print("---\n")
-
-# -------------------------------
-# 1️⃣ Factorielle
-# -------------------------------
-
-# Factorielle itérative
-def factorielle_iterative(n):
-    resultat = 1
-    for i in range(1, n + 1):
-        resultat *= i
-    return resultat
-
-print("Factorielle itérative de 5 :", factorielle_iterative(5))
-
-# Factorielle récursive
-def factorielle_recursive(n):
-    if n == 0:
-        return 1
-    return n * factorielle_recursive(n - 1)
-
-print("Factorielle récursive de 5 :", factorielle_recursive(5))
-
-# Factorielle avec comprehension
-from functools import reduce
-
-def factorielle_comprehension(n):
-    if n == 0:
-        return 1
-    return reduce(lambda x, y: x * y, [i for i in range(1, n + 1)])
-
-print("Factorielle (comprehension) de 5 :", factorielle_comprehension(5))
-
-
-# -------------------------------
-# 2️⃣ Somme des n premiers entiers
-# -------------------------------
-
-# Somme avec while
-def somme_while(n):
-    i = 1
-    s = 0
-    while i <= n:
-        s += i
-        i += 1
-    return s
-
-print("Somme 1+2+...+5 (while) :", somme_while(5))
-
-# Somme récursive
-def somme_recursive(n):
-    if n == 0:
-        return 0
-    return n + somme_recursive(n - 1)
-
-print("Somme 1+2+...+5 (récursive) :", somme_recursive(5))
-
-
-# -------------------------------
-# 3️⃣ Suite de Fibonacci
-# -------------------------------
-
-# Fibonacci itératif
-def fib_iter(n):
-    a, b = 0, 1
-    for _ in range(n):
-        a, b = b, a + b
-    return a
-
-print("Fibonacci itératif (n=10) :", fib_iter(10))
-
-# Fibonacci récursif
-def fib_rec(n):
-    if n <= 1:
-        return n
-    return fib_rec(n - 1) + fib_rec(n - 2)
-
-print("Fibonacci récursif (n=10) :", fib_rec(10))
-
-
-# -------------------------------
-# 4️⃣ Synthèse comparative
-# -------------------------------
-
-print("""
-| Algorithme  | Formule mathématique                 | Base                     | Récurrence | Complexité temporelle                   |
-|-------------|-------------------------------------|--------------------------|------------|----------------------------------------|
-| Factorielle | n! = n * (n-1)!                     | 0! = 1                   | Simple     | O(n)                                   |
-| Somme       | S(n) = n + S(n-1)                   | S(0) = 0                 | Simple     | O(n)                                   |
-| Fibonacci   | F(n) = F(n-1) + F(n-2)              | F(0)=0, F(1)=1           | Double     | O(2^n) (récursif) / O(n) (itératif)  |
-""")
-
-# -------------------------------
-# 🧠 Conclusion
-# -------------------------------
-
-print("""
-- Les boucles (`for`, `while`) permettent une programmation itérative, efficace en mémoire.  
-- La récursion traduit directement la définition mathématique d’un algorithme, mais consomme plus de mémoire.  
-- Les deux approches atteignent le même résultat, mais influencent différemment la structure, la performance et la lisibilité des algorithmes.
-""")
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 🪐 RAPPORT : Analyse de Code Python (Variables, Moyennes, Ensembles)\n\n",
+    "|     |                     |\n",
+    "| --- | ------------------- |\n",
+    "| Nom | laala hamdaoui |\n",
+    "| 🆔  | 300157334         |\n\n",
+    "Ce notebook présente trois sections :\n",
+    "1. Le module `embellisseur` et la fonction `f`\n",
+    "2. Le module `moyenne` (moyenne algébrique et géométrique)\n",
+    "3. Les ensembles (`set`) et la compréhension\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1️⃣ Import du module `embellisseur`\n\n",
+    "Cette section montre comment la fonction `f` traite différents types de variables.\n",
+    "Elle illustre le **polymorphisme** de Python (une même fonction peut gérer plusieurs types).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from embellisseur import f\n\n",
+    "exemples = [\n",
+    "    10,\n",
+    "    2.718,\n",
+    "    \"hello\",\n",
+    "    [7, 8, 9],\n",
+    "    (10, 20, 30),\n",
+    "    {\"x\": 1, \"y\": 2}\n",
+    "]\n\n",
+    "for e in exemples:\n",
+    "    print(f\"\\n--- f({e}) ---\")\n",
+    "    resultat = f(e)\n",
+    "    for k, v in resultat.items():\n",
+    "        print(f\"{k:12} -> {v}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2️⃣ Moyenne algébrique et géométrique\n\n",
+    "Le module `moyenne` contient deux fonctions :\n\n",
+    "- `algebrique(L)` : calcule la moyenne arithmétique  \n",
+    "$$\\bar{x} = \\frac{\\sum x_i}{n}$$\n",
+    "- `geometrique(L)` : calcule la moyenne géométrique  \n",
+    "$$G = \\sqrt[n]{\\prod x_i}$$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from moyenne import algebrique, geometrique\n\n",
+    "print(\"La moyenne algébrique est :\", algebrique([2, 4.5, 6, 8, 10]))\n",
+    "print(\"La moyenne géométrique est :\", geometrique([2, 4.5, 6, 8, 10]))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3️⃣ Ensembles (set) et compréhension\n\n",
+    "${\\displaystyle \\{(k,x)\\ \\|\\ k\\in K\\wedge x\\in X\\wedge P(x)\\}}$\n\n",
+    "On construit un ensemble `S` de couples `(k, x)` où :\n",
+    "- `k` provient de la liste `K = ['A', 'B', 'C']`\n",
+    "- `x` provient de la liste `X = [1, 2, 3, 4, 5, 6]`\n",
+    "- et `x` satisfait une condition `P(x)` (ici, être pair).\n\n",
+    "Cela illustre :\n",
+    "- les **comprehensions** (`{... for ... if ...}`)\n",
+    "- l'utilisation des **ensembles (`set`)**\n",
+    "- la **réutilisation de fonction** (`algebrique`)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K = ['A', 'B', 'C']\n",
+    "X = [1, 2, 3, 4, 5, 6]\n\n",
+    "def P(x):\n",
+    "    return x % 2 == 0\n\n",
+    "S = {(k, x) for k in K for x in X if P(x)}\n",
+    "print(\"Ensemble des couples filtrés :\", S)\n\n",
+    "x_values = [x for (_, x) in S]\n",
+    "if x_values:\n",
+    "    moyenne = algebrique(x_values)\n",
+    "else:\n",
+    "    moyenne = 0\n\n",
+    "print(\"Moyenne algébrique des x filtrés :\", moyenne)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 🧠 Conclusion\n\n",
+    "Ce rapport montre comment :\n",
+    "- Une même fonction (`f`) peut traiter plusieurs types de données.\n",
+    "- Des fonctions mathématiques (`algebrique`, `geometrique`) peuvent être réutilisées.\n",
+    "- Les **ensembles** et **comprehensions** facilitent les filtres et combinaisons de données.\n\n",
+    "> 🧩 Python est un langage à typage dynamique, où les fonctions peuvent être générales,\n",
+    "> et les structures (listes, tuples, sets, dictionnaires) très expressives.\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.x"
+  },
+  "created": "2025-11-12T22:46:06.802253Z"
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
