--- a/7.Algorithmes/300156612/RAPPORT.ipynb
+++ b/7.Algorithmes/300156612/RAPPORT.ipynb
@@ -7,6 +7,10 @@
    "source": [
     "# 🧮 Étude : Influence des boucles et de la récursion sur les algorithmes\n",
     "\n",
+    "**Nom :** Fateh  \n",
+    "**ID :** 300159189  \n",
+    "**Date :** 12 novembre 2025\n",
+    "\n",
     "Ce rapport démontre comment les **algorithmes** sont influencés par la **programmation itérative** (avec `for`, `while`) et la **programmation récursive** en **Python**."
    ]
   },
@@ -18,7 +22,6 @@
     "## 1️⃣ Factorielle\n",
     "\n",
     "### 🔹 Formule mathématique\n",
-    "\n",
     "$\n",
     "n! = \\begin{cases}\n",
     "   1, & \\text{si } n = 0 \\\\\n",
@@ -30,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "efcb751e-1bfb-430e-b18e-b85ab2a1167d",
+   "id": "efcb751e-1bfb-430e-b18e-b85ab2a1167",
    "metadata": {},
    "outputs": [
     {
@@ -104,21 +107,9 @@
    "metadata": {},
    "source": [
     "## 2️⃣ Somme des n premiers entiers\n",
-    "\n",
     "### 🔹 Formule mathématique\n",
-    "\n",
     "$\n",
     "S(n) = 1 + 2 + 3 + \\dots + n = \\frac{n(n + 1)}{2}\n",
-    "$\n",
-    "\n",
-    "### 🔹 Forme récursive\n",
-    "\n",
-    "$\n",
-    "S(n) =\n",
-    "\\begin{cases}\n",
-    "   0, & \\text{si } n = 0 \\\\\n",
-    "   n + S(n - 1), & \\text{si } n > 0\n",
-    "\\end{cases}\n",
     "$"
    ]
   },
@@ -141,164 +132,4 @@
    ],
    "source": [
     "def somme_while(n):\n",
-    "    i = 1\n",
-    "    s = 0\n",
-    "    while i <= n:\n",
-    "        s += i\n",
-    "        i += 1\n",
-    "    return s\n",
-    "\n",
-    "somme_while(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "03317415-db58-40ea-ab07-c001ce5feb94",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def somme_recursive(n):\n",
-    "    if n == 0:\n",
-    "        return 0\n",
-    "    return n + somme_recursive(n - 1)\n",
-    "\n",
-    "somme_recursive(5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c4fc9a72-51c9-4198-9bb4-5f91e61dcf1a",
-   "metadata": {},
-   "source": [
-    "## 3️⃣ Suite de Fibonacci\n",
-    "\n",
-    "### 🔹 Formule mathématique\n",
-    "\n",
-    "$\n",
-    "F(n) =\n",
-    "\\begin{cases}\n",
-    "   0, & \\text{si } n = 0 \\\\\n",
-    "   1, & \\text{si } n = 1 \\\\\n",
-    "   F(n - 1) + F(n - 2), & \\text{si } n \\ge 2\n",
-    "\\end{cases}\n",
-    "$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "16726d91-2f8f-46c9-8979-e592a043674e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "55"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def fib_iter(n):\n",
-    "    a, b = 0, 1\n",
-    "    for _ in range(n):\n",
-    "        a, b = b, a + b\n",
-    "    return a\n",
-    "\n",
-    "fib_iter(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "8a74a240-42a0-4180-806c-1fd2a1ef94dd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "55"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def fib_rec(n):\n",
-    "    if n <= 1:\n",
-    "        return n\n",
-    "    return fib_rec(n - 1) + fib_rec(n - 2)\n",
-    "\n",
-    "fib_rec(10)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cbb91b5d-1f3f-4b96-b563-23cb04dfbad1",
-   "metadata": {},
-   "source": [
-    "## 📘 4️⃣ Synthèse comparative\n",
-    "\n",
-    "| Algorithme | Formule mathématique | Base | Récurrence | Complexité temporelle |\n",
-    "|-------------|----------------------|-------|-------------|------------------------|\n",
-    "| Factorielle | \\\\( n! = n \\times (n-1)! \\\\) | \\\\( 0! = 1 \\\\) | Simple | O(n) |\n",
-    "| Somme | \\\\( S(n) = n + S(n-1) \\\\) | \\\\( S(0) = 0 \\\\) | Simple | O(n) |\n",
-    "| Fibonacci | \\\\( F(n) = F(n-1) + F(n-2) \\\\) | \\\\( F(0)=0, F(1)=1 \\\\) | Double | O($2^n$) (récursif) / O(n) (itératif) |\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### 🧠 Conclusion\n",
-    "\n",
-    "- Les **boucles (`for`, `while`)** permettent une **programmation itérative**, efficace en mémoire.  \n",
-    "- La **récursion** traduit directement la **définition mathématique** d’un algorithme, mais consomme plus de mémoire.  \n",
-    "- Les deux approches atteignent le même résultat, mais influencent différemment la **structure, la performance et la lisibilité** des algorithmes."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a314f12-bff0-4a11-8ac7-874762150cb5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.9"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
-}
+    "    i = 1\n
