--- a/7.Algorithmes/300156612/RAPPORT.ipynb
+++ b/7.Algorithmes/300156612/RAPPORT.ipynb
@@ -2,26 +2,23 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "caaae55f-3321-4d91-946a-7c7549e85961",
+   "id": "f2068f86-ac46-41b8-8b50-5abcb617d15a",
    "metadata": {},
    "source": [
     "# 🧮 Étude : Influence des boucles et de la récursion sur les algorithmes\n",
-    "\n",
-    "**Nom :** Fateh  \n",
-    "**ID :** 300159189  \n",
-    "**Date :** 12 novembre 2025\n",
     "\n",
     "Ce rapport démontre comment les **algorithmes** sont influencés par la **programmation itérative** (avec `for`, `while`) et la **programmation récursive** en **Python**."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f64851bb-1b0b-46db-91aa-4e2c44bfb6b7",
+   "id": "27ee5479-1088-4e91-9e35-d77f6483c3bc",
    "metadata": {},
    "source": [
     "## 1️⃣ Factorielle\n",
     "\n",
     "### 🔹 Formule mathématique\n",
+    "\n",
     "$\n",
     "n! = \\begin{cases}\n",
     "   1, & \\text{si } n = 0 \\\\\n",
@@ -33,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "efcb751e-1bfb-430e-b18e-b85ab2a1167",
+   "id": "cfa040a3-510b-4ae1-bf58-3b77b5a4fbce",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b6926b01-8b30-442f-8fe6-00d702285fd7",
+   "id": "f1b2ac95-d8fa-40e0-9185-fc45d49142a7",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a19e87bc-ea3e-4e60-8434-a92731f529cd",
+   "id": "3b13fcb0-b1c6-4766-9d70-61225ee72954",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,20 +100,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96631451-7cb0-4948-996b-6b9d6732a1d7",
+   "id": "d4dbe323-ff80-455c-932e-a7f9268684ba",
    "metadata": {},
    "source": [
     "## 2️⃣ Somme des n premiers entiers\n",
+    "\n",
     "### 🔹 Formule mathématique\n",
+    "\n",
     "$\n",
     "S(n) = 1 + 2 + 3 + \\dots + n = \\frac{n(n + 1)}{2}\n",
+    "$\n",
+    "\n",
+    "### 🔹 Forme récursive\n",
+    "\n",
+    "$\n",
+    "S(n) =\n",
+    "\\begin{cases}\n",
+    "   0, & \\text{si } n = 0 \\\\\n",
+    "   n + S(n - 1), & \\text{si } n > 0\n",
+    "\\end{cases}\n",
     "$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9cae5529-c37a-4469-82c6-8fe71ae39772",
+   "id": "35fbce74-8eff-474d-bac7-f69bbb5cf39a",
    "metadata": {},
    "outputs": [
     {
@@ -132,4 +141,164 @@
    ],
    "source": [
     "def somme_while(n):\n",
-    "    i = 1\n
+    "    i = 1\n",
+    "    s = 0\n",
+    "    while i <= n:\n",
+    "        s += i\n",
+    "        i += 1\n",
+    "    return s\n",
+    "\n",
+    "somme_while(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "294fb050-9088-4f07-b5b9-cecb3b98ffaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def somme_recursive(n):\n",
+    "    if n == 0:\n",
+    "        return 0\n",
+    "    return n + somme_recursive(n - 1)\n",
+    "\n",
+    "somme_recursive(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c653c53b-0f38-4ef7-ac6c-27f65140e320",
+   "metadata": {},
+   "source": [
+    "## 3️⃣ Suite de Fibonacci\n",
+    "\n",
+    "### 🔹 Formule mathématique\n",
+    "\n",
+    "$\n",
+    "F(n) =\n",
+    "\\begin{cases}\n",
+    "   0, & \\text{si } n = 0 \\\\\n",
+    "   1, & \\text{si } n = 1 \\\\\n",
+    "   F(n - 1) + F(n - 2), & \\text{si } n \\ge 2\n",
+    "\\end{cases}\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4578aec4-07f9-4358-871f-1ff99af587e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fib_iter(n):\n",
+    "    a, b = 0, 1\n",
+    "    for _ in range(n):\n",
+    "        a, b = b, a + b\n",
+    "    return a\n",
+    "\n",
+    "fib_iter(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "79795cd2-e0ef-4efa-9730-1901cd8c5b3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fib_rec(n):\n",
+    "    if n <= 1:\n",
+    "        return n\n",
+    "    return fib_rec(n - 1) + fib_rec(n - 2)\n",
+    "\n",
+    "fib_rec(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "729eda59-ef86-43e0-a17a-63f5ddc7530d",
+   "metadata": {},
+   "source": [
+    "## 📘 4️⃣ Synthèse comparative\n",
+    "\n",
+    "| Algorithme | Formule mathématique | Base | Récurrence | Complexité temporelle |\n",
+    "|-------------|----------------------|-------|-------------|------------------------|\n",
+    "| Factorielle | \\\\( n! = n \\times (n-1)! \\\\) | \\\\( 0! = 1 \\\\) | Simple | O(n) |\n",
+    "| Somme | \\\\( S(n) = n + S(n-1) \\\\) | \\\\( S(0) = 0 \\\\) | Simple | O(n) |\n",
+    "| Fibonacci | \\\\( F(n) = F(n-1) + F(n-2) \\\\) | \\\\( F(0)=0, F(1)=1 \\\\) | Double | O($2^n$) (récursif) / O(n) (itératif) |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 🧠 Conclusion\n",
+    "\n",
+    "- Les **boucles (`for`, `while`)** permettent une **programmation itérative**, efficace en mémoire.  \n",
+    "- La **récursion** traduit directement la **définition mathématique** d’un algorithme, mais consomme plus de mémoire.  \n",
+    "- Les deux approches atteignent le même résultat, mais influencent différemment la **structure, la performance et la lisibilité** des algorithmes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b44158cc-e562-416b-8940-f2820c20ab9d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.12"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
