Mise a jour de RAPPORT.ipynb

--- a/6.Variables/300151558/RAPPORT.ipynb
+++ b/6.Variables/300151558/RAPPORT.ipynb
@@ -35,10 +35,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4262e99b-25a8-48a2-b56f-d60d486b557a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- f(10) ---\n",
+      "binaire      -> 0b1010\n",
+      "hexadécimal  -> 0xa\n",
+      "int          -> 10\n",
+      "float        -> 10.0\n",
+      "str          -> 10\n",
+      "\n",
+      "--- f(2.718) ---\n",
+      "float        -> 2.718\n",
+      "int          -> 2\n",
+      "str          -> 2.718\n",
+      "\n",
+      "--- f(hello) ---\n",
+      "str          -> hello\n",
+      "list         -> ['h', 'e', 'l', 'l', 'o']\n",
+      "tuple        -> ('h', 'e', 'l', 'l', 'o')\n",
+      "\n",
+      "--- f([7, 8, 9]) ---\n",
+      "list         -> [7, 8, 9]\n",
+      "tuple        -> (7, 8, 9)\n",
+      "array        -> array('i', [7, 8, 9])\n",
+      "str          -> [7, 8, 9]\n",
+      "\n",
+      "--- f((10, 20, 30)) ---\n",
+      "tuple        -> (10, 20, 30)\n",
+      "list         -> [10, 20, 30]\n",
+      "array        -> array('i', [10, 20, 30])\n",
+      "str          -> (10, 20, 30)\n",
+      "\n",
+      "--- f({'x': 1, 'y': 2}) ---\n",
+      "dict         -> {'x': 1, 'y': 2}\n",
+      "list_clés    -> ['x', 'y']\n",
+      "list_valeurs -> [1, 2]\n",
+      "str          -> {'x': 1, 'y': 2}\n"
+     ]
+    }
+   ],
    "source": [
     "from embellisseur import f\n",
     "\n",
@@ -74,10 +116,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "368af2c0-b916-4b81-8afc-55befade2b69",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moyenne algébrique : 6.1\n",
+      "Moyenne géométrique : 5.3345372167932\n"
+     ]
+    }
+   ],
    "source": [
     "from moyenne import algebrique, geometrique\n",
     "\n",
