--- a/6.Variables/300155281/RAPPORT.ipynb
+++ b/6.Variables/300155281/RAPPORT.ipynb
@@ -1,12 +1,215 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "72eb3b70-417f-4fee-bec7-5b83848fcaf5",
+   "cell_type": "markdown",
+   "id": "3329fbe8-f3d4-4735-bc91-7ffa522055e3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 🪐 RAPPORT : Analyse de Code Python (Variables, Moyennes, Ensembles)\n",
+    "\n",
+    "|     |                     |\n",
+    "| --- | ------------------- |\n",
+    "| Nom | **Ernice** |\n",
+    "| 🆔  | **300155281** |\n",
+    "\n",
+    "\n",
+    "Ce notebook présente trois sections :\n",
+    "1. Le module `embellisseur` et la fonction `f`\n",
+    "2. Le module `moyenne` (moyenne algébrique et géométrique)\n",
+    "3. Les ensembles (`set`) et la compréhension"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "197f1ee4-6471-45c8-a9ab-d8885322792e",
+   "metadata": {},
+   "source": [
+    "#### 1️⃣ Import du module `embellisseur`\n",
+    "\n",
+    "Cette section montre comment la fonction `f` traite différents types de variables.\n",
+    "Elle illustre le **polymorphisme** de Python (une même fonction peut gérer plusieurs types)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "547aa543-772a-4827-b2c6-8db02231803f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- f(10) ---\n",
+      "binaire      -> 0b1010\n",
+      "hexadécimal  -> 0xa\n",
+      "int          -> 10\n",
+      "float        -> 10.0\n",
+      "str          -> 10\n",
+      "\n",
+      "--- f(2.718) ---\n",
+      "float        -> 2.718\n",
+      "int          -> 2\n",
+      "str          -> 2.718\n",
+      "\n",
+      "--- f(hello) ---\n",
+      "str          -> hello\n",
+      "list         -> ['h', 'e', 'l', 'l', 'o']\n",
+      "tuple        -> ('h', 'e', 'l', 'l', 'o')\n",
+      "\n",
+      "--- f([7, 8, 9]) ---\n",
+      "list         -> [7, 8, 9]\n",
+      "tuple        -> (7, 8, 9)\n",
+      "array        -> array('i', [7, 8, 9])\n",
+      "str          -> [7, 8, 9]\n",
+      "\n",
+      "--- f((10, 20, 30)) ---\n",
+      "tuple        -> (10, 20, 30)\n",
+      "list         -> [10, 20, 30]\n",
+      "array        -> array('i', [10, 20, 30])\n",
+      "str          -> (10, 20, 30)\n",
+      "\n",
+      "--- f({'x': 1, 'y': 2}) ---\n",
+      "dict         -> {'x': 1, 'y': 2}\n",
+      "list_clés    -> ['x', 'y']\n",
+      "list_valeurs -> [1, 2]\n",
+      "str          -> {'x': 1, 'y': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from embellisseur import f\n",
+    "\n",
+    "exemples = [\n",
+    "    10,\n",
+    "    2.718,\n",
+    "    \"hello\",\n",
+    "    [7, 8, 9],\n",
+    "    (10, 20, 30),\n",
+    "    {\"x\": 1, \"y\": 2}\n",
+    "]\n",
+    "\n",
+    "for e in exemples:\n",
+    "    print(f\"\\n--- f({e}) ---\")\n",
+    "    resultat = f(e)\n",
+    "    for k, v in resultat.items():\n",
+    "        print(f\"{k:12} -> {v}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c6fdefc-fb36-47d7-9fe0-58830fa43578",
+   "metadata": {},
+   "source": [
+    "## 2️⃣ Moyenne algébrique et géométrique\n",
+    "\n",
+    "Le module `moyenne` contient deux fonctions :\n",
+    "\n",
+    "- `algebrique(L)` : calcule la moyenne arithmétique\n",
+    "  $$\n",
+    "  \\bar{x} = \\frac{\\sum x_i}{n}\n",
+    "  $$\n",
+    "- `geometrique(L)` : calcule la moyenne géométrique\n",
+    "  $$\n",
+    "  G = \\sqrt[n]{\\prod x_i}\n",
+    "  $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "038ae594-c907-4c13-ac5c-a7db10ad5a9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La moyenne algébrique est : 6.1\n",
+      "La moyenne géométrique est : 5.3345372167932\n"
+     ]
+    }
+   ],
+   "source": [
+    "from moyenne import algebrique, geometrique\n",
+    "\n",
+    "print(\"La moyenne algébrique est :\", algebrique([2, 4.5, 6, 8, 10]))\n",
+    "print(\"La moyenne géométrique est :\", geometrique([2, 4.5, 6, 8, 10]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc5b5d77-2fe9-462d-ad0d-24f6ac3b871b",
+   "metadata": {},
+   "source": [
+    "## 3️⃣ Ensembles (set) et compréhension\n",
+    "\n",
+    "L'objectif est de construire un ensemble `S` de couples $(k, x)$ selon la notation :\n",
+    "$$\n",
+    "{\\displaystyle \\{(k,x)\\ \\|\\ k\\in K\\wedge x\\in X\\wedge P(x)\\}}\n",
+    "$$\n",
+    "\n",
+    "On construit un ensemble `S` de couples `(k, x)` où :\n",
+    "- `k` provient de la liste `K = ['A', 'B', 'C']`\n",
+    "- `x` provient de la liste `X = [1, 2, 3, 4, 5, 6]`\n",
+    "- et `x` satisfait une condition `P(x)` (ici, être pair).\n",
+    "\n",
+    "Cela illustre :\n",
+    "- les **comprehensions** (`{... for ... if ...}`)\n",
+    "- l'utilisation des **ensembles (`set`)**\n",
+    "- la **réutilisation de fonction** (`algebrique`)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c3a118fb-5fbf-46c3-b122-faa67ab0ccdc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ensemble des couples filtrés : {('B', 4), ('C', 6), ('A', 4), ('C', 2), ('A', 6), ('B', 6), ('B', 2), ('C', 4), ('A', 2)}\n",
+      "Moyenne algébrique des x filtrés : 4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "K = ['A', 'B', 'C']\n",
+    "X = [1, 2, 3, 4, 5, 6]\n",
+    "\n",
+    "def P(x):\n",
+    "    return x % 2 == 0\n",
+    "\n",
+    "S = {(k, x) for k in K for x in X if P(x)}\n",
+    "print(\"Ensemble des couples filtrés :\", S)\n",
+    "\n",
+    "x_values = [x for (_, x) in S]\n",
+    "if x_values:\n",
+    "    moyenne = algebrique(x_values)\n",
+    "else:\n",
+    "    moyenne = 0\n",
+    "\n",
+    "print(\"Moyenne algébrique des x filtrés :\", moyenne)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba87dd2f-d848-43d1-893d-a0eee833f6ef",
+   "metadata": {},
+   "source": [
+    "## 🧠 Conclusion\n",
+    "\n",
+    "Ce rapport montre comment :\n",
+    "- Une même fonction (`f`) peut traiter plusieurs types de données.\n",
+    "- Des fonctions mathématiques (`algebrique`, `geometrique`) peuvent être réutilisées.\n",
+    "- Les **ensembles** et **comprehensions** facilitent les filtres et combinaisons de données.\n",
+    "\n",
+    "> 🧩 Python est un langage à typage dynamique, où les fonctions peuvent être générales,\n",
+    "> et les structures (listes, tuples, sets, dictionnaires) très expressives."
+   ]
   }
  ],
  "metadata": {
