Update report with author and ID information

--- a/7.Algorithmes/300151262/RAPPORT.ipynb
+++ b/7.Algorithmes/300151262/RAPPORT.ipynb
@@ -7,6 +7,11 @@
    "source": [
     "# 🧮 Étude : Influence des boucles et de la récursion sur les algorithmes\n",
     "\n",
+    "|     |                     |\n",
+    "| --- | ------------------- |\n",
+    "| **Nom** | *Ahmed BERGUI* |\n",
+    "| **🆔**  | *300151262* |\n",
+    "\n",
     "Ce rapport démontre comment les **algorithmes** sont influencés par la **programmation itérative** (avec `for`, `while`) et la **programmation récursive** en **Python**."
    ]
   },
