modifier le fichier RAPPORT

--- a/6.Variables/300156612/RAPPORT.ipynb
+++ b/6.Variables/300156612/RAPPORT.ipynb
@@ -5,7 +5,13 @@
    "id": "db2b534a-9d46-4e0b-b1cf-f6207d92c8be",
    "metadata": {},
    "source": [
-    "# RAPPORT : Analyse de Code Python (Variables, Moyennes, Ensembles)\n",
+    "# 🪐 RAPPORT : Analyse de Code Python (Variables, Moyennes, Ensembles)\n",
+    "\n",
+    "|     |                     |\n",
+    "| --- | ------------------- |\n",
+    "| Nom | FERHAT MEHDIOUI |\n",
+    "| 🆔  | 300156612           |\n",
+    "\n",
     "\n",
     "Ce notebook présente trois sections :\n",
     "1. Le module `embellisseur` et la fonction `f`\n",
@@ -16,7 +22,9 @@
   {
    "cell_type": "markdown",
    "id": "0e8f9252-5040-49a0-870a-3d4af7ccf132",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### 1️⃣ Import du module `embellisseur`\n",
     "\n",
