--- a/7.Algorithmes/300158052/RAPPORT.ipynb
+++ b/7.Algorithmes/300158052/RAPPORT.ipynb
@@ -9,8 +9,8 @@
     "\n",
     "|     |                     |\n",
     "| --- | ------------------- |\n",
-    "| **Nom** | *Lahlou Lachi* |\n",
-    "| **🆔**  | *300150410* |\n",
+    "| **Nom** | *Zineddine Bouchelkia* |\n",
+    "| **🆔**  | *300158052* |\n",
     "\n",
     "Ce rapport démontre comment les **algorithmes** sont influencés par la **programmation itérative** (avec `for`, `while`) et la **programmation récursive** en **Python**."
    ]
