Update personal information in RAPPORT.ipynb

--- a/6.Variables/300151505/RAPPORT.ipynb
+++ b/6.Variables/300151505/RAPPORT.ipynb
@@ -7,8 +7,8 @@
     "# 🪐 RAPPORT : Analyse de Code Python (Variables, Moyennes, Ensembles)\n\n",
     "|     |                     |\n",
     "| --- | ------------------- |\n",
-    "| Nom | Personne Importante |\n",
-    "| 🆔  | 999999999           |\n\n",
+    "| Nom |arezki aidene |\n",
+    "| 🆔  |300151505          |\n\n",
     "Ce notebook présente trois sections :\n",
     "1. Le module `embellisseur` et la fonction `f`\n",
     "2. Le module `moyenne` (moyenne algébrique et géométrique)\n",
