--- a/7.Algorithmes/300158486/RAPPORT.ipynb
+++ b/7.Algorithmes/300158486/RAPPORT.ipynb
@@ -2,10 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f0bed098-d973-48e2-9721-9e5d08a68c2d",
+   "id": "b32d029d-5381-45c3-a543-13a77cef20fb",
    "metadata": {},
    "source": [
     "# 🧮 Étude : Influence des boucles et de la récursion sur les algorithmes\n",
+    "\n",
+    "|     |                     |\n",
+    "| --- | ------------------- |\n",
+    "| Nom | Lyes Hamed |\n",
+    "| 🆔  | 300158486           |\n",
     "\n",
     "Ce rapport démontre comment les **algorithmes** sont influencés par la **programmation itérative** (avec `for`, `while`) et la **programmation récursive** en **Python**."
    ]
