modifier le fichier RAPPORT

--- a/7.Algorithmes/300156612/RAPPORT.ipynb
+++ b/7.Algorithmes/300156612/RAPPORT.ipynb
@@ -7,6 +7,11 @@
    "source": [
     "# 🧮 Étude : Influence des boucles et de la récursion sur les algorithmes\n",
     "\n",
+    "|     |                     |\n",
+    "| --- | ------------------- |\n",
+    "| Nom | Ferhat Mehdioui |\n",
+    "| 🆔  | 300156612          |\n",
+    "\n",
     "Ce rapport démontre comment les **algorithmes** sont influencés par la **programmation itérative** (avec `for`, `while`) et la **programmation récursive** en **Python**."
    ]
   },
@@ -84,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "3b13fcb0-b1c6-4766-9d70-61225ee72954",
    "metadata": {},
    "outputs": [],
@@ -296,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
