Ajout du fichier RAPPORT

--- a/6.Variables/300155187/RAPPORT.ipynb
+++ b/6.Variables/300155187/RAPPORT.ipynb
@@ -2,22 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6de6e7c9-68af-4e50-b161-d1734a083065",
+   "id": "082de42c-b530-46af-b6c0-a14ec9a787cf",
    "metadata": {},
    "source": [
     "# 🪐 RAPPORT : Analyse de Code Python (Variables, Moyennes, Ensembles)\n",
     "\n",
     "|     |                     |\n",
     "| --- | ------------------- |\n",
-    "| Nom | Maimouna Diallo|\n",
+    "| Nom | Maimouna Diallo |\n",
     "| 🆔  | 300155187          |\n",
     "\n",
-    "\n",
-    "**Nom :** Maimouna  \n",
-    "**ID :** 300155187  \n",
-  
-    "\n",
-    "---\n",
     "\n",
     "Ce notebook présente trois sections :\n",
     "1. Le module `embellisseur` et la fonction `f`\n",
@@ -27,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0e2d1fc-1ef3-4ee9-827c-47d9a230c53b",
+   "id": "fb5bccda-fab8-44c2-877b-e58a6cf734a7",
    "metadata": {},
    "source": [
     "#### 1️⃣ Import du module `embellisseur`\n",
@@ -39,8 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-<<<<<<< HEAD
-   "id": "b65ac45c-f0d2-4a51-a9ed-eacff2a736bb",
+   "id": "ebdfb176-6d49-42ae-8677-4e4ecf7f9587",
    "metadata": {},
    "outputs": [
     {
@@ -85,11 +78,6 @@
      ]
     }
    ],
-=======
-   "id": "6029c233-a369-48ac-94ac-10a837f7c137",
-   "metadata": {},
-   "outputs": [],
->>>>>>> d2460fdf364adf276c45c818ca7dae698a627273
    "source": [
     "from embellisseur import f\n",
     "\n",
@@ -111,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cd421d4-6a4f-4a7a-beaf-cfdf0b409234",
+   "id": "2c95e3b5-df74-4178-bcd9-771606b0cba1",
    "metadata": {},
    "source": [
     "## 2️⃣ Moyenne algébrique et géométrique\n",
@@ -131,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "16429db7-a412-4add-a1a0-79dd242c43ca",
+   "id": "8ea9aa4b-e628-41b3-a914-ecb84768ef5c",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf2b9ec6-b699-4caa-a5b4-047e410ba9bb",
+   "id": "fcfaf04c-6cad-4311-aca8-18c0c5ba27d5",
    "metadata": {},
    "source": [
     "## 3️⃣ Ensembles (set) et compréhension\n",
@@ -172,15 +160,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "090d26d5-a981-4c54-b7e5-13ff75d63a46",
+   "execution_count": 3,
+   "id": "c1765807-46c6-47ad-85a4-891cec25fa5e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ensemble des couples filtrés : {('B', 4), ('A', 6), ('C', 6), ('C', 2), ('A', 2), ('B', 6), ('B', 2), ('C', 4), ('A', 4)}\n",
+      "Ensemble des couples filtrés : {('C', 6), ('B', 2), ('C', 2), ('B', 4), ('A', 6), ('A', 2), ('C', 4), ('B', 6), ('A', 4)}\n",
       "Moyenne algébrique des x filtrés : 4.0\n"
      ]
     }
@@ -206,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2224bc81-3a8d-435a-905c-3d53b57ab955",
+   "id": "03f81517-a3bb-4680-81ec-b512a0802c83",
    "metadata": {},
    "source": [
     "## 🧠 Conclusion\n",
@@ -219,17 +207,14 @@
     "> 🧩 Python est un langage à typage dynamique, où les fonctions peuvent être générales,\n",
     "> et les structures (listes, tuples, sets, dictionnaires) très expressives."
    ]
-<<<<<<< HEAD
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd8df140-17ad-42a8-a487-1a443c381aab",
+   "id": "4503d85a-63f5-4f79-92db-daa2f63a37db",
    "metadata": {},
    "outputs": [],
    "source": []
-=======
->>>>>>> d2460fdf364adf276c45c818ca7dae698a627273
   }
  ],
  "metadata": {
