Ajout du fichier RAPPORT

--- a/7.Algorithmes/300155187/RAPPORT.ipynb
+++ b/7.Algorithmes/300155187/RAPPORT.ipynb
@@ -7,30 +7,18 @@
    "source": [
     "# 🧮 Étude : Influence des boucles et de la récursion sur les algorithmes\n",
     "\n",
+    "|     |                     |\n",
+    "| --- | ------------------- |\n",
+    "| Nom | Maimouna Diallo |\n",
+    "| 🆔  | 300155187           |\n",
+    "\n",
     "Ce rapport démontre comment les **algorithmes** sont influencés par la **programmation itérative** (avec `for`, `while`) et la **programmation récursive** en **Python**."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9ed408c6-627e-4851-aaa1-a74a1aec2832",
-   "metadata": {},
-   "source": [
-    "## 1️⃣ Factorielle\n",
-    "\n",
-    "### 🔹 Formule mathématique\n",
-    "\n",
-    "$\n",
-    "n! = \\begin{cases}\n",
-    "   1, & \\text{si } n = 0 \\\\\n",
-    "   n \\times (n - 1)!, & \\text{si } n > 0\n",
-    "\\end{cases}\n",
-    "$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b46291ff-9ff2-4fb4-a811-a3872b078d9b",
+   "id": "067d9ea2-56d8-4ba7-a42f-10b71fd59dc2",
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5bdb1523-d218-4fab-a69f-0fe5393b2229",
+   "id": "2e8bf860-0c56-46ba-9f24-ce2301dec643",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7675ef9e-1c61-49fd-ae31-a6073e06a163",
+   "id": "8212bd7b-b769-48e2-93e9-654c5a1d0f54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a269b4a-0171-4c05-b1bc-7d0c9ed1ac9f",
+   "id": "da1c0e4d-66d5-4651-a0c7-b6d89d2f7f4f",
    "metadata": {},
    "source": [
     "## 2️⃣ Somme des n premiers entiers\n",
@@ -125,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "802ca831-8ae4-483c-b789-568e60f41a86",
+   "id": "707a9266-a6cd-47fb-a26c-2eea136cea70",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "53aaf7af-a7a7-4d67-abec-89d5ba664301",
+   "id": "0e5d63bc-0e7b-4500-9b20-9a55e75a7631",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7610742a-4cce-4cca-8dfd-680927505bfc",
+   "id": "b814cdd7-b21b-41b4-83df-b545d39278c7",
    "metadata": {},
    "source": [
     "## 3️⃣ Suite de Fibonacci\n",
@@ -199,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "05a0965b-1635-4db3-bf17-8f48a267387d",
+   "id": "44645a1b-840f-4720-a691-db86a3526d38",
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4ef0f8b4-623e-4325-adcc-f6708d555a89",
+   "id": "cca65c60-1bd2-4a3e-b348-382aef0c9396",
    "metadata": {},
    "outputs": [
     {
@@ -250,8 +238,8 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "89f053a5-a98c-49e9-9c2f-642563f18492",
+   "cell_type": "markdown",
+   "id": "45088fc3-edae-45ea-9639-a5169456d88d",
    "metadata": {},
    "source": [
     "## 📘 4️⃣ Synthèse comparative\n",
@@ -274,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faab03c4-4c13-4a5b-918b-4097403c7c5e",
+   "id": "c36571bd-9747-4dd2-854c-ec0e8876f4ab",
    "metadata": {},
    "outputs": [],
    "source": []
