Refactor cell IDs and update markdown content
Updated markdown cells and code cell IDs in the notebook.

--- a/7.Algorithmes/300155466/RAPPORT.ipynb
+++ b/7.Algorithmes/300155466/RAPPORT.ipynb
@@ -1,19 +1,23 @@
-
 {
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "caaae55f-3321-4d91-946a-7c7549e85961",
+   "id": "b32d029d-5381-45c3-a543-13a77cef20fb",
    "metadata": {},
    "source": [
     "# 🧮 Étude : Influence des boucles et de la récursion sur les algorithmes\n",
+    "\n",
+    "|     |                     |\n",
+    "| --- | ------------------- |\n",
+    "| Nom | Hana Rekhila |\n",
+    "| 🆔  | 300155466          |\n",
     "\n",
     "Ce rapport démontre comment les **algorithmes** sont influencés par la **programmation itérative** (avec `for`, `while`) et la **programmation récursive** en **Python**."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f64851bb-1b0b-46db-91aa-4e2c44bfb6b7",
+   "id": "c9c7bd11-d448-4aa4-8cfd-ab818dd9ae9a",
    "metadata": {},
    "source": [
     "## 1️⃣ Factorielle\n",
@@ -31,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "efcb751e-1bfb-430e-b18e-b85ab2a1167d",
+   "id": "9840884b-f738-45e0-a79b-4e9cb9a9570e",
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b6926b01-8b30-442f-8fe6-00d702285fd7",
+   "id": "d4550a12-cf2c-4735-92a9-736608914e40",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a19e87bc-ea3e-4e60-8434-a92731f529cd",
+   "id": "398e0bc3-343f-4f37-984f-5ac72101c835",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96631451-7cb0-4948-996b-6b9d6732a1d7",
+   "id": "7630b0db-560c-45ee-a0fb-3d4c89539fef",
    "metadata": {},
    "source": [
     "## 2️⃣ Somme des n premiers entiers\n",
@@ -126,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9cae5529-c37a-4469-82c6-8fe71ae39772",
+   "id": "b6404634-151d-49b0-8f7d-b21d21da19f5",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "03317415-db58-40ea-ab07-c001ce5feb94",
+   "id": "dccc076c-75fd-4465-a24a-b2b936947c4a",
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4fc9a72-51c9-4198-9bb4-5f91e61dcf1a",
+   "id": "608f2359-a58f-4226-a79b-215e66a29c09",
    "metadata": {},
    "source": [
     "## 3️⃣ Suite de Fibonacci\n",
@@ -200,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "16726d91-2f8f-46c9-8979-e592a043674e",
+   "id": "0f0cf99b-32af-46a5-aca2-b127ec0d882d",
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8a74a240-42a0-4180-806c-1fd2a1ef94dd",
+   "id": "3887899b-781b-4ce6-a504-6df3f7d7c2ee",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbb91b5d-1f3f-4b96-b563-23cb04dfbad1",
+   "id": "62b16204-7c3f-451e-8a80-5be08e7d9b7a",
    "metadata": {},
    "source": [
     "## 📘 4️⃣ Synthèse comparative\n",
@@ -271,14 +275,6 @@
     "- La **récursion** traduit directement la **définition mathématique** d’un algorithme, mais consomme plus de mémoire.  \n",
     "- Les deux approches atteignent le même résultat, mais influencent différemment la **structure, la performance et la lisibilité** des algorithmes."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a314f12-bff0-4a11-8ac7-874762150cb5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
