Fix name typo in RAPPORT.ipynb

--- a/7.Algorithmes/300151505/RAPPORT.ipynb
+++ b/7.Algorithmes/300151505/RAPPORT.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "|     |                     |\n",
     "| --- | ------------------- |\n",
-    "| **Nom** | *arezqi ayden* |\n",
+    "| **Nom** | *arezki aidene* |\n",
     "| **🆔**  | *300151505* |\n",
     "\n",
     "Ce rapport démontre comment les **algorithmes** sont influencés par la **programmation itérative** (avec `for`, `while`) et la **programmation récursive** en **Python**."
